[Major] Removed PrivilegeRep as duplicate of Privilege
Privilege is already a record, and thus the rep is not necessary as it is immutable